--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     </head>
     <body data-reveal-selectors="section:not(.masonry):not(:first-of-type):not(.parallax)">
-
-
 		<div class="nav-container">
 		    <nav style="min-height:70px;">
 		        <div class="nav-bar" data-fixed-at="1000" style="margin-bottom:15px;">
@@ -56,12 +54,12 @@
 		<div class="main-container">
   		<section class="height-85 imagebg cover cover-1 parallax" data-overlay="3">
   				<div class="background-image">
-  					<img alt="image" class="tedx1" src="Theme_with_date.svg" style="margin:10px 20px 10px 20px">
+  					<!-- <img alt="image" class="tedx1" src="Theme_with_date.svg" style="margin:10px 20px 10px 20px"> -->
   				</div>
   				<div class="container pos-vertical-center">
   					<div class="row">
   		</section>
-			<div class="container" style="margin-top:25px">
+			<div class="container" style="padding:3em">
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 text-center">
 							<h3>Keep the Conversation Going</h3>
@@ -71,7 +69,7 @@
 						</div>
 					</div>
 			</div>
-			<div class="volunteer" style="background-color:#E0DFE8;">
+			<div class="volunteer" style="background-color:#E0DFE8;padding:3em 0em">
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text-center">
 							<h3>Become a Volunteer</h3>
