adding some touches

--- a/index.html
+++ b/index.html
@@ -59,28 +59,47 @@
   				<div class="container pos-vertical-center">
   					<div class="row">
   		</section>
-			<div class="container" style="padding:3em">
+			<div class="container" style="padding:4em 3em">
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 text-center">
 							<h3>Keep the Conversation Going</h3>
-							<p class="lead">
+							<p class="lead" style="font-weight: 200">
 								Our event theme is about conversations that we need to have more of and more than just the discussions, but the actions and projects we need to kick start to keep the conversation going.
 							</p>
 						</div>
 					</div>
 			</div>
-			<div class="volunteer" style="background-color:#E0DFE8;padding:3em 0em">
+			<div class="volunteer" style="border-top:1px solid #444;border-bottom:1px solid #444;padding:4em 0em">
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text-center">
 							<h3>Become a Volunteer</h3>
-							<p class="lead">
+							<p class="lead" style="font-weight: 200">
                 Sorry! We're full but please be on the look out when we put out vacancy.
 							</p>
-							<a class="btn">
-								<span class="btn__text">
-									Join Us
+							<a class="btn"  style="background-color: #e62b1e;color:white;border-radius:10px">
+								<span class="btn__text helvetica" style="background-color: #e62b1e;color:white">
+									<b>Join Us</b>
 								</span>
 							</a>
+					</div>
+				</div>
+			</div>
+			<div class="volunteer" style="padding:3em 0em">
+				<div class="row">
+					<div class="col-sm-8 col-sm-offset-2 text-center">
+							<h3>Keep the Conversation going Speakers</h3>
+							<div class="row">
+								<div class="col-md-3">
+									<img src="" class="img-rounded" style="border:2px solid #e62b1e">
+								</div>
+								<div class="col-md-3"></div>
+								<div class="col-md-3"></div>
+								<div class="col-md-3"></div>
+								<div class="col-md-3"></div>
+								<div class="col-md-3"></div>
+								<div class="col-md-3"></div>
+								<div class="col-md-3"></div>
+							</div>
 					</div>
 				</div>
 			</div>
