--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="css/interface-icons.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/owl.carousel.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/theme.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="tedxcu.css" rel="stylesheet" type="text/css">
+        <link href="css/tedxcu.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     </head>
