--- a/index.html
+++ b/index.html
@@ -1,129 +1,174 @@
 
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>TEDxCovenantUniversity</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
-        <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/interface-icons.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/owl.carousel.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/theme.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/tedxcu.css" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
-    </head>
-    <body data-reveal-selectors="section:not(.masonry):not(:first-of-type):not(.parallax)">
-		<div class="nav-container">
-		    <nav style="min-height:70px;">
-		        <div class="nav-bar" data-fixed-at="1000" style="margin-bottom:15px;">
-		            <div class="nav-module logo-module left">
-		                <a href="index.html"><img alt="logo" class="tedxicon" src="TedxCU_black.svg"></a>
-		            </div>
-		            <div class="nav-module menu-module right">
-		                <ul class="menu">
-		                    <li class="vpe">
-		                        <a href="#">Home</a>
-		                    </li>
+<head>
+	<meta charset="utf-8">
+	<title>TEDxCovenantUniversity</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all"> -->
+	<link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
+	<link href="css/interface-icons.css" rel="stylesheet" type="text/css" media="all"/>
+	<link href="css/owl.carousel.css" rel="stylesheet" type="text/css" media="all"/>
+	<link href="css/theme.css" rel="stylesheet" type="text/css" media="all"/>
+	<link href="css/tedxcu.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
-		                    <li class="vpe">
-		                        <a href="#">Our Story</a>
-		                    </li>
+</head>
+<body data-reveal-selectors="section:not(.masonry):not(:first-of-type):not(.parallax)">
+	<div class="nav-container">
+		<nav style="min-height:70px;">
+			<div class="nav-bar" data-fixed-at="1000" style="margin-bottom:15px;">
+				<div class="nav-module logo-module left">
+					<a href="index.html"><img alt="logo" class="tedxicon" src="img/TedxCU_black.svg"></a>
+				</div>
+				<div class="nav-module menu-module right">
+					<ul class="menu">
+						<li class="vpe">
+							<a href="#">Home</a>
+						</li>
 
-		                    <li class="vpe">
-		                        <a href="#">Speakers</a>
-		                    </li>
+						<li class="vpe">
+							<a href="#">Our Story</a>
+						</li>
 
-		                    <li class="vpe">
-		                        <a href="#">Sponsors</a>
-		                    </li>
+						<li class="vpe">
+							<a href="#">Speakers</a>
+						</li>
 
-		                    <li class="vpe">
-		                        <a href="#">Contact us</a>
-		                    </li>
-		                </ul>
-		            </div>
-		        </div>
-		        <div class="nav-mobile-toggle visible-sm visible-xs">
-		            <i class="icon-Align-JustifyAll icon icon--sm"></i>
-		        </div>
-		    </nav>
-		</div>
-		<div class="main-container">
-  		<section class="height-85 imagebg cover cover-1 parallax" data-overlay="3">
-  				<div class="background-image">
-  					<!-- <img alt="image" class="tedx1" src="Theme_with_date.svg" style="margin:10px 20px 10px 20px"> -->
-  				</div>
-  				<div class="container pos-vertical-center">
-  					<div class="row">
-  		</section>
-			<div class="container" style="padding:4em 3em">
+						<li class="vpe">
+							<a href="#">Sponsors</a>
+						</li>
+
+						<li class="vpe">
+							<a href="#">Contact us</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="nav-mobile-toggle visible-sm visible-xs">
+				<i class="icon-Align-JustifyAll icon icon--sm"></i>
+			</div>
+		</nav>
+	</div>
+	<div class="main-container" style="margin-top:-20px">
+		<section class="height-85 imagebg cover cover-1 parallax" data-overlay="3">
+			<div class="background-image">
+				<!-- <img alt="image" class="tedx1" src="Theme_with_date.svg" style="margin:10px 20px 10px 20px"> -->
+			</div>
+			<div class="container pos-vertical-center">
+				<div class="row">
+				</section>
+				<div class="row" style="padding:2em;background-color: #e62b1e">
+					<div class="col-md-8 col-md-offset-2 text-center">
+						<p class="lead whitefont" style="font-weight: 400">
+							For more details on future events 
+						</p>
+						<div style="display:block">
+							<input type="text" name="mail" class="form-control" placeholder="e-mail address" style="display:inline-block;width:80%;height:60px">
+							<a class="btn"  style="background-color: #000;color:white;border-radius:50px;height:60px;width:60px;display:inline-block;padding-left: 0;padding-right: 0;margin-left: -5%">
+								<span class="btn__text helvetica" style="background-color: #000;color:white">
+									<i class="fa fa-arrow-right whitefont" style="font-size:20px;margin-top: 10px"></i>
+								</span>
+							</a>
+						</div>
+						
+						
+						<p class="lead whitefont" style="font-weight: 400">
+							Join our mailing list
+						</p>
+					</div>
+				</div>
+				<div class="container" style="padding:4em 3em">
 					<div class="row">
-						<div class="col-sm-8 col-sm-offset-2 text-center">
+						<div class="col-md-8 col-md-offset-2 text-center">
 							<h3>Keep the Conversation Going</h3>
 							<p class="lead" style="font-weight: 200">
-								Our event theme is about conversations that we need to have more of and more than just the discussions, but the actions and projects we need to kick start to keep the conversation going.
+								Our event theme Keep the conversation going is about conversations that we need to have more of and more than just the discussions, but the actions and projects we need to kick start to keep the conversation going. 
 							</p>
 						</div>
 					</div>
-			</div>
-			<div class="volunteer" style="border-top:1px solid #444;border-bottom:1px solid #444;padding:4em 0em">
-				<div class="row">
-					<div class="col-sm-8 col-sm-offset-2 text-center">
+				</div>
+				<div class="volunteer" style="border-top:1px solid #444;border-bottom:1px solid #444;padding:4em 0em">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 text-center">
 							<h3>Become a Volunteer</h3>
 							<p class="lead" style="font-weight: 200">
-                Sorry! We're full but please be on the look out when we put out vacancy.
+								We're full but please be on the look out when we put out vacancy.
 							</p>
 							<a class="btn"  style="background-color: #e62b1e;color:white;border-radius:10px">
 								<span class="btn__text helvetica" style="background-color: #e62b1e;color:white">
 									<b>Join Us</b>
 								</span>
 							</a>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="volunteer" style="padding:3em 0em">
-				<div class="row">
-					<div class="col-sm-8 col-sm-offset-2 text-center">
+				<div class="volunteer" style="padding:4em 0em">
+					<div class="row">
+						<div class="col-sm-10 col-sm-offset-1 text-center">
 							<h3>Keep the Conversation going Speakers</h3>
-							<div class="row">
-								<div class="col-md-3">
-									<img src="" class="img-rounded" style="border:2px solid #e62b1e">
+							<br><br>
+							<!-- <div class="row">
+								<div class="col-sm-6 col-md-4 col-lg-3">
+									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #e62b1e">
+									<br>
+									<h4 class="blackfont" style="font-weight: 500;margin-bottom: 0px">SPEAKER</h4>
+									<h5 class="lead redfont">TOPIC/BIO</h5>
 								</div>
-								<div class="col-md-3"></div>
-								<div class="col-md-3"></div>
-								<div class="col-md-3"></div>
-								<div class="col-md-3"></div>
-								<div class="col-md-3"></div>
-								<div class="col-md-3"></div>
-								<div class="col-md-3"></div>
-							</div>
+								<div class="col-sm-6 col-md-4 col-lg-3">
+									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #e62b1e">
+									<br>
+									<h4 class="blackfont" style="font-weight: 500;margin-bottom: 0px">SPEAKER</h4>
+									<h5 class="lead redfont">TOPIC/BIO</h5>
+								</div>
+								<div class="col-sm-6 col-md-4 col-lg-3">
+									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #e62b1e">
+									<br>
+									<h4 class="blackfont" style="font-weight: 500;margin-bottom: 0px">SPEAKER</h4>
+									<h5 class="lead redfont">TOPIC/BIO</h5>
+								</div>
+								<div class="col-sm-6 col-md-4 col-lg-3">
+									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #e62b1e">
+									<br>
+									<h4 class="blackfont" style="font-weight: 500;margin-bottom: 0px">SPEAKER</h4>
+									<h5 class="lead redfont">TOPIC/BIO</h5>
+								</div>
+							</div> -->
+						</div>
 					</div>
 				</div>
+				<div class="volunteer" style="background-image:url('img/img.jpg');border-top:1px solid #444;border-bottom:1px solid #444;position:relative">
+					<div style="position: absolute;height: 100%;width:100%;background-color: rgba(0,0,0,0.6)"></div>
+					<div class="row" style="padding:4em 0em;color:white">
+						<div class="col-md-8 col-md-offset-2 text-center">
+							<h3 class="whitefont"><b>What is TEDX?</h3>
+							<p class="lead whitefont">
+								TEDx are independent TED-like events, which can be organized by anyone who obtains a free license from TED, agreeing to follow certain principles. TEDx events are non-profit but may use an admission fee or commercial sponsorship to cover costs. Similarly, speakers are not paid. They must also relinquish the copyrights to their materials, which TED may edit and distribute under a Creative Commons license.
+							</p>
+						</div>
+					</div>
+				</div>
+				<footer style="padding: 1em">
+					<div class="row">
+						<div class="col-sm-6">
+							<span class="type--fine-print" style="font-size: 12px;">© Copyright <span class="update-year">2016</span> TedxCovenantUniversity - All Rights Reserved</span>
+						</div>
+						<div class="col-sm-6">
+							<ul style="display:inline; float: right;margin-right:10px;margin-bottom: 0;line-height: 1;">
+								<li style="float:right">Twitter</li>
+								<li style="float:right;margin-right:10px">Instagram</li>
+							</ul>
+						</div>
+					</div>
+				</footer>
 			</div>
-		<footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6">
-            <span class="type--fine-print">© Copyright <span class="update-year">2016</span> TedxCovenantUniversity - All Rights Reserved</span>
-          </div>
-          <div class="col-sm-6">
-            <ul style="display:inline; float: right;">
-              <li>Twitter</li>
-              <li>Instagram</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-		</footer>
-		</div>
 
 
-		<script src="js/jquery-2.1.4.min.js"></script>
-        <script src="js/scrollreveal.min.js"></script>
-        <script src="js/parallax.js"></script>
-        <script src="js/scripts.js"></script>
-    </body>
-</html>
+			<script src="js/jquery-2.1.4.min.js"></script>
+			<script src="js/scrollreveal.min.js"></script>
+			<script src="js/parallax.js"></script>
+			<script src="js/scripts.js"></script>
+		</body>
+		</html>
