making navbar white

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
 </head>
-<body data-reveal-selectors="section:not(.masonry):not(:first-of-type):not(.parallax)">
-	<div class="nav-container">
+<body data-reveal-selectors="section:not(.masonry):not(:first-of-type):not(.parallax)" style="background-color: white">
+	<div class="nav-container" style="background-color: white">
 		<nav style="min-height:70px;">
 			<div class="nav-bar" data-fixed-at="1000" style="margin-bottom:15px;">
 				<div class="nav-module logo-module left">
