--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 						</li>
 
 						<li class="vpe">
-							<a href="#">Our Story</a>
+							<a href="about.html">Our Story</a>
 						</li>
 
 						<li class="vpe">
-							<a href="#">Speakers</a>
+							<a href="#speakers">Speakers</a>
 						</li>
 
 						<li class="vpe">
-							<a href="#">Sponsors</a>
+							<a href="sponsors.hmtl">Sponsors</a>
 						</li>
 
-						<li class="vpe">
+						<li class="contact.html">
 							<a href="#">Contact us</a>
 						</li>
 					</ul>
@@ -105,7 +105,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="volunteer" style="padding:4em 0em">
+				<div class="volunteer" style="padding:4em 0em" id="speakers">
 					<div class="row">
 						<div class="col-sm-10 col-sm-offset-1 text-center">
 							<h3>Keep the Conversation going Speakers</h3>
@@ -141,7 +141,7 @@
 				</div>
 				<div class="volunteer" style="background-image:url('img/img.jpg');border-top:1px solid #444;border-bottom:1px solid #444;position:relative">
 					<div style="position: absolute;height: 100%;width:100%;background-color: rgba(0,0,0,0.6)"></div>
-					<div class="row" style="padding:4em 0em;color:white">
+					<div class="row" style="padding:4em 3em;color:white">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h3 class="whitefont"><b>What is TEDX?</h3>
 							<p class="lead whitefont">
