--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 				<div class="nav-module menu-module right">
 					<ul class="menu">
 						<li class="vpe">
-							<a href="#">Home</a>
+							<a href="index.html">Home</a>
 						</li>
 
 						<li class="vpe">
@@ -81,8 +81,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="volunteer" style="background-image:url('img/img.jpg');border-top:1px solid #444;border-bottom:1px solid #444;position:relative">
-					<div style="position: absolute;height: 100%;width:100%;background-color: rgba(230,43,30,0.4)"></div>
+				<div class="volunteer" style="background-image:url('img/Hero_3.jpg');border-top:1px solid #444;border-bottom:1px solid #444;position:relative">
+					<div style="position: absolute;height: 100%;width:100%;background-color: rgba(230,43,30,0.6)"></div>
 					<div class="row" style="padding:4em 3em;color:white">
 						<div class="col-sm-12 text-center">
 							<h3 class="whitefont">The Team</h3>
