--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="nav-module menu-module right">
 					<ul class="menu">
 						<li class="vpe">
-							<a href="#">Home</a>
+							<a href="index.html">Home</a>
 						</li>
 
 						<li class="vpe">
@@ -52,8 +52,8 @@
 			</div>
 		</nav>
 	</div>
-	<div class="main-container" style="margin-top:-20px">
-		<section class="height-85 imagebg cover cover-1 parallax" data-overlay="3">
+	<div class="main-container" style="margin-top:-20px;background-color:white">
+		<section class="height-85 imagebg cover cover-1 parallax" data-overlay="3" style="background-image: url('img/Home.svg');height:80vh;position: relative;padding-top:0;background-color:white">
 			<div class="background-image">
 				<!-- <img alt="image" class="tedx1" src="Theme_with_date.svg" style="margin:10px 20px 10px 20px"> -->
 			</div>
@@ -139,7 +139,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="volunteer" style="background-image:url('img/img.jpg');border-top:1px solid #444;border-bottom:1px solid #444;position:relative">
+				<div class="volunteer" style="background:url('img/Hero_2.jpg')no-repeat;background-size: cover;border-top:1px solid #444;border-bottom:1px solid #444;position:relative">
 					<div style="position: absolute;height: 100%;width:100%;background-color: rgba(0,0,0,0.6)"></div>
 					<div class="row" style="padding:4em 3em;color:white">
 						<div class="col-md-8 col-md-offset-2 text-center">
