finished contact us

--- a/about.html
+++ b/about.html
@@ -35,15 +35,15 @@
 						</li>
 
 						<li class="vpe">
-							<a href="#speakers">Speakers</a>
+							<a href="index.html#speakers">Speakers</a>
 						</li>
 
 						<li class="vpe">
-							<a href="sponsors.hmtl">Sponsors</a>
+							<a href="sponsors.html">Sponsors</a>
 						</li>
 
-						<li class="contact.html">
-							<a href="#">Contact us</a>
+						<li class="vpe">
+							<a href="contact.html">Contact us</a>
 						</li>
 					</ul>
 				</div>
