--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
 	<link href="css/tedxcu.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+	<style type="text/css">
+		[data-overlay]:before{
+			background: transparent!important;
+		}
+		.nav-bar{ 
+			 box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.0); 
+		}
+	</style>
 
 </head>
-<body data-reveal-selectors="section:not(.masonry):not(:first-of-type):not(.parallax)" style="background-color: white">
+<body data-reveal-selectors="section:not(.masonry):not(:first-of-type):not(.parallax)" style="background: white">
 	<div class="nav-container" style="background-color: white">
 		<nav style="min-height:70px;">
 			<div class="nav-bar" data-fixed-at="1000" style="margin-bottom:15px;">
@@ -34,15 +42,15 @@
 						</li>
 
 						<li class="vpe">
-							<a href="#speakers">Speakers</a>
+							<a href="index.html#speakers">Speakers</a>
 						</li>
 
 						<li class="vpe">
-							<a href="sponsors.hmtl">Sponsors</a>
+							<a href="sponsors.html">Sponsors</a>
 						</li>
 
-						<li class="contact.html">
-							<a href="#">Contact us</a>
+						<li class="vpe">
+							<a href="contact.html">Contact us</a>
 						</li>
 					</ul>
 				</div>
@@ -52,10 +60,10 @@
 			</div>
 		</nav>
 	</div>
-	<div class="main-container" style="margin-top:-20px;background-color:white">
-		<section class="height-85 imagebg cover cover-1 parallax" data-overlay="3" style="background-image: url('img/Home.svg');height:80vh;position: relative;padding-top:0;background-color:white">
+	<div class="main-container" style="margin-top:-20px;background:white">
+		<section class="height-85 imagebg cover cover-1 parallax" data-overlay="3" style="background-size: cover;position: relative;padding-top:0;background:white;padding: 3em 0">
 			<div class="background-image">
-				<!-- <img alt="image" class="tedx1" src="Theme_with_date.svg" style="margin:10px 20px 10px 20px"> -->
+				<img alt="image" class="tedx1 img-responsive" src="img/Home.svg">
 			</div>
 			<div class="container pos-vertical-center">
 				<div class="row">
@@ -170,5 +178,31 @@
 			<script src="js/scrollreveal.min.js"></script>
 			<script src="js/parallax.js"></script>
 			<script src="js/scripts.js"></script>
+			<script>
+			$(document).ready(function(){
+			  // Add smooth scrolling to all links
+			  $("a").on('click', function(event) {
+
+			    // Make sure this.hash has a value before overriding default behavior
+			    if (this.hash !== "") {
+			      // Prevent default anchor click behavior
+			      event.preventDefault();
+
+			      // Store hash
+			      var hash = this.hash;
+
+			      // Using jQuery's animate() method to add smooth page scroll
+			      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+			      $('html, body').animate({
+			        scrollTop: $(hash).offset().top
+			      }, 800, function(){
+			   
+			        // Add hash (#) to URL when done scrolling (default click behavior)
+			        window.location.hash = hash;
+			      });
+			    } // End if
+			  });
+			});
+			</script>
 		</body>
 		</html>
