--- a/sponsors.html
+++ b/sponsors.html
@@ -54,40 +54,27 @@
 		</nav>
 	</div>
 	<div class="main-container" style="margin-top:-20px">
-		<section class="imagebg cover cover-1 parallax">
-			<div class="container pos-vertical-center">
-				<div class="row">
-				</section>
-				<div class="container" style="padding:4em 3em">
-					<div class="row">
-						<div class="col-md-7 text-left">
-							<h3>About TED</h3>
-							<p class="lead" style="font-weight: 200;font-size:16px">
-								TED (Technology, Entertainment, Design) is a media organization which posts talks online for free distribution, under the slogan "ideas worth spreading". TED was founded in February 1984 as a conference, which has been held annually since 1990. TED's early emphasis was technology and design, consistent with its Silicon Valley origins, but it has since broadened its focus to include talks on many scientific, cultural, and academic topics.
-							</p>
-						</div>
-						<div class="col-md-5 text-left">
-							<h3>About TEDx-independently organized event</h3>
-							<p class="lead" style="font-weight: 200;font-size:16px">
-								TEDx are independent TED-like events, which can be organized by anyone who obtains a free license from TED, agreeing to follow certain principles. TEDx events are non-profit but may use an admission fee or commercial sponsorship to cover costs. Similarly, speakers are not paid. They must also relinquish the copyrights to their materials, which TED may edit and distribute under a Creative Commons license. 
-							</p>
-						</div>
-					</div>
+		<div class="container" style="padding:4em 3em;min-height:80vh ">
+			<div class="row">
+				<div class="col-md-3 text-left">
+					<img src="img/culogo.jpeg" class="img-responsive">
 				</div>
-				<footer style="padding: 1em">
-					<div class="row">
-						<div class="col-sm-6">
-							<span class="type--fine-print" style="font-size: 12px;">© Copyright <span class="update-year">2016</span> TedxCovenantUniversity - All Rights Reserved</span>
-						</div>
-						<div class="col-sm-6">
-							<ul style="display:inline; float: right;margin-right:10px;margin-bottom: 0;line-height: 1;">
-								<li style="float:right">Twitter</li>
-								<li style="float:right;margin-right:10px">Instagram</li>
-							</ul>
-						</div>
-					</div>
-				</footer>
 			</div>
+		</div>
+		<footer style="padding: 1em">
+			<div class="row">
+				<div class="col-sm-6">
+					<span class="type--fine-print" style="font-size: 12px;">© Copyright <span class="update-year">2016</span> TedxCovenantUniversity - All Rights Reserved</span>
+				</div>
+				<div class="col-sm-6">
+					<ul style="display:inline; float: right;margin-right:10px;margin-bottom: 0;line-height: 1;">
+						<li style="float:right">Twitter</li>
+						<li style="float:right;margin-right:10px">Instagram</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</div>
 
 
 			<script src="js/jquery-2.1.4.min.js"></script>
