adding register and blog to navbar

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 						<li class="vpe">
 							<a href="contact.html">Contact us</a>
 						</li>
+						<li class="vpe">
+							<a href="https://medium.com/@tedxcovenantuniversity" target="_blank" >Blog</a>
+						</li>
+						<li class="vpe">
+							<a href="http://selar.co/TEDXCU2017" target="_blank" style="color:red;font-weight: 700">Register</a>
+						</li>
 					</ul>
 				</div>
 			</div>
