inserting peoples profile pictures

--- a/about.html
+++ b/about.html
@@ -45,6 +45,13 @@
 						<li class="vpe">
 							<a href="contact.html">Contact us</a>
 						</li>
+						<li class="vpe">
+							<a href="https://medium.com/@tedxcovenantuniversity" target="_blank" >Blog</a>
+						</li>
+
+						<li class="vpe">
+							<a href="http://selar.co/TEDXCU2017" target="_blank" style="color:red;font-weight: 700">Register</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -89,126 +96,133 @@
 							<br><br>
 							<div class="row">
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/fimage.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Eyitayo Alimi</h4>
 									<h5 class="lead whitefont">Organizer</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Daniel Adeyemi</h4>
 									<h5 class="lead whitefont">Co- Organizer </h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/segunolujide.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Segun</h4>
 									<h5 class="lead whitefont">Partnership</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/mimage.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Dayo</h4>
 									<h5 class="lead whitefont">Partnership</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/mimage.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">David Kezi</h4>
 									<h5 class="lead whitefont">Tech/IT</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/oj.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Udale-Ameh Ojimaojo</h4>
 									<h5 class="lead whitefont">Tech/IT</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/godwin.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Olatunde Godwin</h4>
 									<h5 class="lead whitefont">Design</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/fimage.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Oluwaseeto</h4>
 									<h5 class="lead whitefont">Design</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/fimage.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Princess</h4>
 									<h5 class="lead whitefont">Media/ PR</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/toby.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Tobi</h4>
 									<h5 class="lead whitefont">Media/ PR</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/rotimi.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
+									<br>
+									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Rotimi Okugbaye</h4>
+									<h5 class="lead whitefont">Media/ PR</h5>
+									<br>
+								</div>
+								<div class="col-sm-6 col-md-4 col-lg-3">
+									<img src="img/profilepics/sandra.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Sandra Israel-Ovirih</h4>
 									<h5 class="lead whitefont">Media/ PR</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/mimage.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Benny Diagi</h4>
 									<h5 class="lead whitefont">Media/ PR</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/sanni_onize.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Osuashi</h4>
 									<h5 class="lead whitefont">Speaker Liaison</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/ibifubara.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Ibifubara</h4>
 									<h5 class="lead whitefont">Speaker Liaison</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/susan.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
-									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Susan</h4>
+									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Nnadi Nnedimkpa Susan</h4>
 									<h5 class="lead whitefont">Speaker Liaison</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/mercymarcus.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Mercy</h4>
 									<h5 class="lead whitefont">Welfare</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/fimage.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Dami</h4>
 									<h5 class="lead whitefont">Welfare</h5>
 									<br>
 								</div>
 								<div class="col-sm-6 col-md-4 col-lg-3">
-									<img src="img/img.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff">
+									<img src="img/profilepics/fimage.jpg" class="img-circle" style="height:200px;width:200px;display:block;margin:0 auto;border:2px solid #fff;background-color:white">
 									<br>
 									<h4 class="whitefont" style="font-weight: 500;margin-bottom: 0px">Tamuno</h4>
 									<h5 class="lead whitefont">Welfare</h5>
