--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>TEDxCovenantUniversity</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="img/tedx.jpg" type="image/png" sizes="16x16">
 	<!-- <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all"> -->
 	<link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
